--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="centr">
-            <h1 class = "grand-text">Safety Bingo Game Manager</h1>
+            <h1 class = "grand-text">Safety Bingo Game Manager Live</h1>
           </div>
           <div class="bb-spacer"></div>
           <div class="bb-spacer"></div>
