--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="30">
     <title>Safety Bingo</title>
     <link rel="icon" href="imgs/favicon.ico">
 
@@ -12,74 +13,10 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/432d3ed90f.js" crossorigin="anonymous"></script>
     <!--Style Sheet-->
-    <link rel="stylesheet" href="styles_input.css">
+    <link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
-
-    <div id="game_setup">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-          <div class="centr">
-            <h1 class = "grand-text">Safety Bingo Game Manager Live</h1>
-          </div>
-          <div class="bb-spacer"></div>
-          <div class="bb-spacer"></div>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8">
-          <div class="form-pretty">
-            <div class="row">
-              <div class="col-lg-1"></div>
-              <div class="col-lg-10">
-                <div class="bb-spacer"></div>
-                <div class="bb-spacer"></div>
-                <h1 class="inform">Enter data here, Click "Reset" when done.</h1>
-                <div class="bb-spacer"></div>
-                <div class="bb-spacer"></div>
-                <div class="bb-spacer"></div>
-                <form>
-                  <div class="form-group">
-                    <input type="text" class="form-control centr" id="Name_of_restarter" placeholder="The name of the person who restarted the game">
-                    <div class="bb-spacer"></div>
-                    <div class="bb-spacer"></div>
-                    <input type="text" class="form-control centr" id="Num_of_accidents" placeholder="Days since last accident">
-                    <div class="bb-spacer"></div>
-                    <div class="bb-spacer"></div>
-                    <input type="text" class="form-control centr" id="Num_of_speeding" placeholder="Days since last speeding violation">
-                    <div class="bb-spacer"></div>
-                    <div class="bb-spacer"></div>
-                    <input type="text" class="form-control centr" id="starting_pot" placeholder="Starting Pot (Don't add a '$')">
-                    <div class="bb-spacer"></div>
-                    <div class="bb-spacer"></div>
-                    <input type="text" class="form-control centr" id="pot_increase" placeholder="Amount the Pot increases (Don't add a '$')">
-                    <div class="bb-spacer"></div>
-                    <div class="bb-spacer"></div>
-                    <input type="text" class="form-control centr" id="pot_max" placeholder="Pot maximum value (Don't add a '$')">
-                    <div class="med-spacer"></div>
-                    <div class="centr">
-                      <button id="resetter" type="button" class="reset_button">Reset</button>
-
-                    </div>
-                    <div class="bb-spacer"></div>
-                  </div>
-                </form>
-              </div>
-              <div class="col-lg-1"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2"></div>
-      </div>
-      <div class="med-spacer"></div>
-      <div class="med-spacer"></div>
-      <div class="med-spacer"></div>
-    </div>
-
     <div id="gameboard">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
