Days Without Update
Added "Days Without" To speeding and accidents

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               <h1 class="headr-alt">Current Jackpot:</h1>
               <p id="jackpot" class="num-alt">_</p>
               <div class="bb-spacer"></div>
-              <h1 class="headr-alt">Speeding:</h1>
+              <h1 class="headr-alt">Days Without Speeding:</h1>
               <p id="speeding" class="num-alt">_</p>
               <div class="bb-spacer"></div>
-              <h1 class="headr-alt">Accidents:</h1>
+              <h1 class="headr-alt">Days Without Accidents:</h1>
               <p id="accidents" class="num-alt">_</p>
             </div>
           </div>
